fix: corrige configuracao de CORS para producao
Remove CorsConfig.java redundante e define origens explicitas no SecurityConfig para resolver o bloqueio de CORS no deploy do Railway.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>